--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-AUTH0_SECRET=quOJv8drzJnxbuTXO2Qdich7BbDjTudgK_Q0eP0_aa7QA5Gzkx1Ycl2wPP3MD5SP
-AUTH0_BASE_URL=http://localhost:3000
-AUTH0_ISSUER_BASE_URL='https://{DOMAIN}'
-AUTH0_CLIENT_ID='{CLIENT_ID}'
-AUTH0_CLIENT_SECRET='{CLIENT_SECRET}'
-AUTH0_AUDIENCE=
-AUTH0_SCOPE='openid profile'
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgres://postgres.jycxtrnuedmrqeffytvz:granjasdelcarmen2024*@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
