--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,10 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
-
-# Cypress
-test-results
-cypress/screenshots
-cypress/videos
-cypress.env.json
 
 # next.js
 /.next/
@@ -31,10 +26,11 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
 
 # vercel
 .vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
