--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18",
