--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "granjas-del-carmen",
+  "name": "awesome-links",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "postinstall": "prisma generate",
-    "build": "prisma generate &&  next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.6",
+    "@pothos/core": "^3.41.0",
+    "@pothos/plugin-prisma": "^3.65.0",
     "@prisma/client": "^5.10.2",
-    "bcrypt": "^5.1.1",
-    "next": "14.1.0",
-    "next-auth": "^4.24.6",
-    "prisma": "^5.10.2",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.50.1"
+    "graphql": "^16.8.1",
+    "graphql-scalars": "^1.22.5",
+    "graphql-yoga": "^5.1.1",
+    "next": "^13.1.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "prisma": "^5.10.2",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4"
+  },
+  "prisma": {
+    "seed": "ts-node --transpile-only ./prisma/seed.ts"
   }
 }
