--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.6",
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@pothos/core": "^3.41.0",
     "@pothos/plugin-prisma": "^3.65.0",
     "@prisma/client": "^5.10.2",
@@ -16,8 +17,11 @@
     "graphql-scalars": "^1.22.5",
     "graphql-yoga": "^5.1.1",
     "next": "^13.1.2",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
