--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pothos/core": "^3.41.0",
     "@pothos/plugin-prisma": "^3.65.0",
     "@prisma/client": "^5.10.2",
+    "@vercel/analytics": "^1.2.2",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.5",
     "graphql-yoga": "^5.1.1",
