update image b2 connection

--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@pothos/core": "^3.41.0",
     "@pothos/plugin-prisma": "^3.65.0",
     "@prisma/client": "^5.10.2",
+    "@types/multer": "^1.4.11",
     "@vercel/analytics": "^1.2.2",
     "backblaze-b2": "^1.7.0",
+    "express": "^4.18.3",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.5",
     "graphql-yoga": "^5.1.1",
+    "multer": "^1.4.5-lts.1",
     "next": "^13.1.2",
     "node-fetch": "^3.3.2",
     "react": "18.2.0",
@@ -32,6 +35,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/backblaze-b2": "^1.5.6",
+    "@types/express": "^4.17.21",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "autoprefixer": "^10.4.13",
